spring-boot/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-vs
spec:
  hosts:
  - "*"
  gateways:
  - springboot-gateway
  
  http:

  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: rollout-bluegreen-active
        port:
          number: 6789
    - destination:
        host: rollout-bluegreen-preview
        port:
          number: 6789
